deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: task1
  name: task1
spec:
  replicas: 3
  selector:
    matchLabels:
      app: task1
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: task1
        access: external
    spec:
      containers:
      - image: httpd
        name: httpd
        ports:
        - containerPort: 80
        resources: 
          requests:
            cpu: 10m
            memory: 50Mi
status: {}
