task1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: task1
  name: task1
spec:
  replicas: 2
  selector:
    matchLabels:
      app: task1
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: task1
        access: external
    spec:
      containers:
      - image: httpd
        name: httpd
        ports:
        - containerPort: 80
        resources: 
          requests:
            cpu: 50m
            memory: 100Mi
status: {}

=======================================
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    app: task1
  name: task1
spec:
  ports:
  - name: 80-80
    port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: task1
    access: external
  type: ClusterIP
status:
  loadBalancer: {}

=======================================
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  creationTimestamp: null
  labels:
    app: task1
  name: task1
spec:
  port:
    targetPort: 80-80
  to:
    kind: ""
    name: task1
    weight: null
status: {}
